header z-index fix

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     position: fixed;
     left: 0px;
     right: 0px;
+    z-index: 1;
 }
 .head-nav{
     display: flex;
@@ -104,6 +105,7 @@
 }
 .price{
     font-size: 16px;
+    color: red;
 }
 .model{
     font-size: 16px;
